--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,18 @@
     "daisyui": "^4.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
+    "react-router": "^7.6.3",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--no-deprecation WATCHPACK_POLLING=true react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "bun vite",
+    "build": "bun vite build",
+    "preview": "bun vite preview",
+    "test": "bun test"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +47,15 @@
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "postcss": "^8.5.3"
+    "@types/bun": "latest",
+    "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "vite": "^7.0.4"
+  },
+  "module": "src/index.tsx",
+  "type": "module",
+  "peerDependencies": {
+    "typescript": "^5"
   }
 }
