update frontend dependencies

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -4,13 +4,11 @@ version = "0.1.0"
 description = "API service for the stack"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi>=0.115.6",
-    "opperai>=0.28.0",
-    "pandas>=2.2.3",
-    "uvicorn>=0.34.0",
-    "python-multipart>=0.0.9",
-    "uuid>=1.30",
-    "psycopg[binary]>=3.2.6",
+    "fastapi==0.116.0",
+    "opperai==1.1.1",
+    "uvicorn==0.35.0",
+    "uuid==1.30",
+    "psycopg[binary]==3.2.9",
 ]
 
 [project.scripts]
