--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "daisyui": "^4.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^7.6.3",
-    "react-router-dom": "^7.6.3",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "web-vitals": "^3.5.2"
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "24.0.13",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "daisyui": "5.0.46",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-router": "7.6.3",
+    "react-router-dom": "7.6.3",
+    "tailwindcss": "4.1.11",
+    "typescript": "5.4.2"
   },
   "scripts": {
     "dev": "bun vite",
@@ -26,36 +21,20 @@
     "preview": "bun vite preview",
     "test": "bun test"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/plugin-transform-private-property-in-object": "7.25.9",
+    "@babel/plugin-transform-react-jsx": "7.25.9",
+    "@tailwindcss/cli": "^4.0.0",
+    "@tailwindcss/postcss": "4.0.0-beta.6",
     "@types/bun": "latest",
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "vite": "^7.0.4"
+    "@vitejs/plugin-react": "4.6.0",
+    "autoprefixer": "10.4.21",
+    "postcss": "8.5.3",
+    "vite": "7.0.4"
   },
   "module": "src/index.tsx",
   "type": "module",
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "5"
   }
 }
